zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__should_succeed__add_2_3.snap
---
source: zoc/src/typecheck/tests/should_succeed.rs
expression: PrettyPrint(type_.raw())
---
(
    ind
    Set0
    "Nat"
    ()
    (
        (
            ()
            ()
        )
        (
            (
                0
            )
            ()
        )
    )
)
