zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__should_succeed__add_succ.snap
---
source: zoc/src/typecheck/tests/should_succeed.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            ind
            Set0
            "Nat"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    (
                        0
                    )
                    ()
                )
            )
        )
        (
            ind
            Set0
            "Nat"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    (
                        0
                    )
                    ()
                )
            )
        )
    )
    (
        (
            ind
            Prop0
            "Eq"
            (
                (
                    ind
                    Set0
                    "Nat"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            (
                                0
                            )
                            ()
                        )
                    )
                )
            )
            (
                (
                    ()
                    (
                        (
                            (
                                fun
                                0
                                (
                                    (
                                        ind
                                        Set0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                    (
                                        ind
                                        Set0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                )
                                (
                                    ind
                                    Set0
                                    "Nat"
                                    ()
                                    (
                                        (
                                            ()
                                            ()
                                        )
                                        (
                                            (
                                                0
                                            )
                                            ()
                                        )
                                    )
                                )
                                (
                                    match
                                    2
                                    1
                                    (
                                        ind
                                        Set0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                    (
                                        (
                                            0
                                            1
                                        )
                                        (
                                            1
                                            (
                                                (
                                                    vcon
                                                    (
                                                        ind
                                                        Set0
                                                        "Nat"
                                                        ()
                                                        (
                                                            (
                                                                ()
                                                                ()
                                                            )
                                                            (
                                                                (
                                                                    0
                                                                )
                                                                ()
                                                            )
                                                        )
                                                    )
                                                    1
                                                )
                                                (
                                                    1
                                                    0
                                                    2
                                                )
                                            )
                                        )
                                    )
                                )
                            )
                            2
                            (
                                (
                                    vcon
                                    (
                                        ind
                                        Set0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                    1
                                )
                                1
                            )
                        )
                    )
                )
            )
        )
        (
            (
                vcon
                (
                    ind
                    Set0
                    "Nat"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            (
                                0
                            )
                            ()
                        )
                    )
                )
                1
            )
            (
                (
                    fun
                    0
                    (
                        (
                            ind
                            Set0
                            "Nat"
                            ()
                            (
                                (
                                    ()
                                    ()
                                )
                                (
                                    (
                                        0
                                    )
                                    ()
                                )
                            )
                        )
                        (
                            ind
                            Set0
                            "Nat"
                            ()
                            (
                                (
                                    ()
                                    ()
                                )
                                (
                                    (
                                        0
                                    )
                                    ()
                                )
                            )
                        )
                    )
                    (
                        ind
                        Set0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                    (
                        match
                        2
                        1
                        (
                            ind
                            Set0
                            "Nat"
                            ()
                            (
                                (
                                    ()
                                    ()
                                )
                                (
                                    (
                                        0
                                    )
                                    ()
                                )
                            )
                        )
                        (
                            (
                                0
                                1
                            )
                            (
                                1
                                (
                                    (
                                        vcon
                                        (
                                            ind
                                            Set0
                                            "Nat"
                                            ()
                                            (
                                                (
                                                    ()
                                                    ()
                                                )
                                                (
                                                    (
                                                        0
                                                    )
                                                    ()
                                                )
                                            )
                                        )
                                        1
                                    )
                                    (
                                        1
                                        0
                                        2
                                    )
                                )
                            )
                        )
                    )
                )
                1
                0
            )
        )
    )
)
