zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__should_succeed__eq_one_zero.snap
---
source: zoc/src/typecheck/tests/should_succeed.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            (
                ind
                Type0
                "Eq1"
                (
                    (
                        ind
                        Type0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                )
                (
                    (
                        ()
                        (
                            (
                                (
                                    vcon
                                    (
                                        ind
                                        Type0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                    1
                                )
                                (
                                    vcon
                                    (
                                        ind
                                        Type0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                    0
                                )
                            )
                        )
                    )
                )
            )
            (
                vcon
                (
                    ind
                    Type0
                    "Nat"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            (
                                0
                            )
                            ()
                        )
                    )
                )
                0
            )
        )
    )
    (
        ind
        Type0
        "False"
        ()
        ()
    )
)
