zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__should_succeed__eq_zero_one.snap
---
source: zoc/src/typecheck/tests/should_succeed.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            (
                ind
                Prop0
                "Eq0"
                (
                    (
                        ind
                        Set0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                )
                (
                    (
                        ()
                        (
                            (
                                vcon
                                (
                                    ind
                                    Set0
                                    "Nat"
                                    ()
                                    (
                                        (
                                            ()
                                            ()
                                        )
                                        (
                                            (
                                                0
                                            )
                                            ()
                                        )
                                    )
                                )
                                0
                            )
                        )
                    )
                )
            )
            (
                (
                    vcon
                    (
                        ind
                        Set0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                    1
                )
                (
                    vcon
                    (
                        ind
                        Set0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                    0
                )
            )
        )
    )
    (
        ind
        Prop0
        "False"
        ()
        ()
    )
)
