zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__should_succeed__ex_falso.snap
---
source: zoc/src/typecheck/tests/should_succeed.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            ind
            Prop0
            "False"
            ()
            ()
        )
    )
    (
        ind
        Set0
        "Nat"
        ()
        (
            (
                ()
                ()
            )
            (
                (
                    0
                )
                ()
            )
        )
    )
)
