zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__should_succeed__mutual_recursion.snap
---
source: zoc/src/typecheck/tests/should_succeed.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            ind
            Set0
            "Tree"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    (
                        (
                            ind
                            Set0
                            "List"
                            ()
                            (
                                (
                                    ()
                                    ()
                                )
                                (
                                    (
                                        1
                                        1
                                    )
                                    ()
                                )
                            )
                        )
                        1
                    )
                    ()
                )
            )
        )
    )
    (
        ind
        Set0
        "Nat"
        ()
        (
            (
                ()
                ()
            )
            (
                (
                    0
                )
                ()
            )
        )
    )
)
